--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
